# Denchio

./: .ftpquota  .gitignore  .htaccess  Pipfile  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
.well-known/pki-validation/: 76D9F3E46101D743B53A406F1D9AF260.txt  BE88D0DD7445E8F70368CE9102830078.txt
Denchio/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  forms.py  models.py  urls.py  views.py
core/: .env  .env.example  settings.py  urls.py  wsgi.py
main/: CoinInfoCollector.py  DBTableManager.py  DistributeAPR.py  MetamaskManager.py  RedisControl.py  admin.py  apps.py  choices.py  forms.py  models.py  urls.py  urls_my_account.py  views.py  views_my_account.py
main/migrations/: 0001_initial.py  0002_auto_20210404_1245.py  0002_auto_20210405_0724.py  0003_merge_20210410_1648.py
static/css/: account.css  index-media.css  index.css  login.css
static/js/: chart.js  contract.js  flipdown.js  script.js  trade.js
staticfiles/animation/: index.html
staticfiles/css/: flipdown.css  index.css
staticfiles/data_csv/: dench_30_days.csv
staticfiles/js/: trade.js  wow.min.js
templates/: base.html  error404.html  index.html  partners.html  privacy.html  shop.html  whitepaper.html
templates/includes/: base.html  my-account-menu.html  top-bar.html
templates/my-account/: account-details.html  address.html  billing.html  dashboard.html  orders.html
tmp/: restart.txt  restart_always.txt
utils/: MetamaskConnection.py  MetamaskConnectionAbstract.py  coinpaprika_ticker.py  data_base.csv  denchcoin.py  exchange.py  token.py
(+19 files in other folders)
