[tool.poetry]
name = "dench_coin"
version = "0.1"
description = ""
authors = ["Narek"]
packages = []


[tool.poetry.dependencies]
python = ">=3.8.0,<3.11.0"
numpy="*"
pandas="*"
Django="<3.9"
django-tastypie="*"
django-rest-framework="*"
sqlparse="*"
ethtoken="*"
atomicwrites="1.3.0"
attrs="19.1.0"
certifi="2019.3.9"
chardet="3.0.4"
coinpaprika="0.1.0"
idna="2.8"
more-itertools="7.0.0"
pluggy="0.9.0"
py="1.8.0"
pytest="4.4.0"
requests="2.21.0"
requests-mock="1.5.2"
six="1.12.0"
urllib3="1.24.2"
web3="^4.9"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"


